fix: invisible border so that use :active does not change position. Add id like props in Checkbox. Change style (left, right sides) for input-icon.

--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -8,7 +8,10 @@
   align-items: center;
   justify-content: center;
 
+  box-sizing: border-box;
   padding: 6px 28px;
+
+  border: 2px solid transparent; /* invisible border so that use :active does not change position */
 }
 
 .primary {
